@@ -74,6 +74,7 @@ public enum ID3v23FieldKey
     IS_GREATEST_HITS(ID3v23Frames.FRAME_ID_V3_USER_DEFINED_INFO, FrameBodyTXXX.IS_GREATEST_HITS, Id3FieldType.TEXT),
     IS_SOUNDTRACK(ID3v23Frames.FRAME_ID_V3_USER_DEFINED_INFO, FrameBodyTXXX.IS_SOUNDTRACK, Id3FieldType.TEXT),
     IS_HD(ID3v23Frames.FRAME_ID_V3_USER_DEFINED_INFO, FrameBodyTXXX.IS_HD, Id3FieldType.TEXT),
+    IS_LIVE(ID3v23Frames.FRAME_ID_V3_USER_DEFINED_INFO, FrameBodyTXXX.LIVE, Id3FieldType.TEXT),
     ITUNES_GROUPING(ID3v23Frames.FRAME_ID_V3_ITUNES_GROUPING, Id3FieldType.TEXT),
     KEY(ID3v23Frames.FRAME_ID_V3_INITIAL_KEY,Id3FieldType.TEXT),
     LANGUAGE(ID3v23Frames.FRAME_ID_V3_LANGUAGE,Id3FieldType.TEXT),
