@@ -72,6 +72,7 @@ public enum ID3v24FieldKey
     IS_COMPILATION(ID3v24Frames.FRAME_ID_IS_COMPILATION, Id3FieldType.TEXT),
     IS_GREATEST_HITS(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.IS_GREATEST_HITS, Id3FieldType.TEXT),
     IS_HD(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.IS_HD, Id3FieldType.TEXT),
+    IS_LIVE(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.LIVE, Id3FieldType.TEXT),
     IS_SOUNDTRACK(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.IS_SOUNDTRACK, Id3FieldType.TEXT),
     ITUNES_GROUPING(ID3v24Frames.FRAME_ID_ITUNES_GROUPING, Id3FieldType.TEXT),
     KEY(ID3v24Frames.FRAME_ID_INITIAL_KEY,Id3FieldType.TEXT),
