@@ -82,6 +82,7 @@ public enum VorbisCommentFieldKey
     IS_CLASSICAL("IS_CLASSICAL",EnumSet.of(Tagger.PICARD,Tagger.JAIKOZ)),
     IS_GREATEST_HITS("IS_GREATEST_HITS",EnumSet.of(Tagger.JAIKOZ)),
     IS_HD("IS_HD",EnumSet.of(Tagger.PICARD,Tagger.JAIKOZ)),
+    IS_LIVE("LIVE",EnumSet.of(Tagger.ROON)),
     IS_SOUNDTRACK("IS_SOUNDTRACK",EnumSet.of(Tagger.PICARD,Tagger.JAIKOZ)),
     KEY("KEY"),
     LABEL("LABEL",EnumSet.of(Tagger.PICARD,Tagger.JAIKOZ)),
